--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="w-full bg-gradient-to-br from-blue-100 to-blue-300"></body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
