Actualizar el idioma a español en index.html, eliminar App.css, y mejorar la gestión de estado en Home.tsx. Añadir ThemeButton para alternar entre temas claro y oscuro.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="w-full bg-gradient-to-br from-blue-100 to-blue-300"></body>
+  <body  class="bg-gradient-to-br from-blue-100 to-blue-300 dark:bg-gradient-to-br dark:from-gray-700 dark:to-slate-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
